--- a/_includes/partner-sub-menu.html
+++ b/_includes/partner-sub-menu.html
@@ -1,22 +1,22 @@
-		<!-- Start menu-partnership -->	
+		<!-- Start menu-partner -->	
 		<section class="menu-product menu-product-{{ page.product }} pb-10 pt-20">
         <nav class="container navbar navbar-toggleable-sm navbar-inverse sub-navbar">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#subNavbarNavDropdown" aria-controls="subNavbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="/partnership/overview">
-						<h2 class="text-white fw600">AIoT Partnership Programme.</h2>
+          <a class="navbar-brand" href="/partner/overview">
+						<h2 class="text-white fw600">AIoT Partner Programme.</h2>
           </a>
           <div class="collapse navbar-collapse justify-content-end" id="subNavbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-overview" href="/partnership/overview">Overview</a>
+                <a class="nav-link" id="navbarMenuLink-overview" href="/partner/overview">Overview</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-benefits" href="/partnership/benefits">Benefits</a>
+                <a class="nav-link" id="navbarMenuLink-benefits" href="/partner/benefits">Benefits</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-join" href="/partnership/join">Join</a>
+                <a class="nav-link" id="navbarMenuLink-join" href="/partner/join">Join</a>
               </li>
             </ul>
           </div>
