--- a/_layouts/partner-benefits.html
+++ b/_layouts/partner-benefits.html
@@ -16,7 +16,7 @@
 					</div>
 				</div>
 				<div class="row justify-content-center icon-is-it-for pb-50 pt-10">
-          {% for post in site.aiot-partnership-program %}
+          {% for post in site.aiot-partner-program %}
             {% if post.class == 'benefit' %}
               {% include highlighted-with-image-item-no-truncation.html %}
             {% endif %}
@@ -25,7 +25,7 @@
 			</div>
 		</section>
 		<!-- Stop what do you get? -->
-    {% include whats-next-partners.html %}
+    {% include whats-next-partner-prog.html %}
 		<!-- End Section News -->	
       {% include primary-footer.html %}
     </main>
