--- a/_layouts/partner_prog.html
+++ b/_layouts/partner_prog.html
@@ -20,7 +20,7 @@
 				</div>
 				<div class="row justify-content-center pb-50 pt-50">
 					<div class="product-page-carousel parent-container">
-            {% for post in site.aiot-partnership-program %}
+            {% for post in site.aiot-partner-program %}
               {% if post.class == 'benefit' %}
                 {% if post.main-benefit == true %}
                   {% include carousel-with-icon-item.html %}
@@ -29,12 +29,12 @@
             {% endfor %}
 					</div>
     			<div class="col-md-12 text-center">
-    			  <a class="btn-sixsq color-dark" href="/partnership/benefits"><i class="far fa-plus-square"></i>  Discover all benefits</a>
+    			  <a class="btn-sixsq color-dark" href="/partner/benefits"><i class="far fa-plus-square"></i>  Discover all benefits</a>
           </div>
 				</div>
 			</div>
 		</section>
-    {% include whats-next-partners.html %}
+    {% include whats-next-partner-prog.html %}
     {% include primary-footer.html %}
     </main>
     {% include secondary-footer.html %}
