--- a/_includes/primary-footer.html
+++ b/_includes/primary-footer.html
@@ -1,6 +1,16 @@
 <!-- Start primary-footer -->
 		<section id="footer" class="contact-bg-2">
 			<div class="container">
+				<div class="row footer-content">
+					<div class="col-md-12 contact text-center">
+						<h4>Contacts:</h4>
+						<ul>
+              <!-- <li class="fw400"><i class="fas fa-mobile fa-phone fa-fw"></i>info/support: +41 22 980 95 80</li> -->
+							<li class="fw400"><i class="fas fa-envelope fa-fw"></i><a href="mailto:info@sixsq.com">info@sixsq.com</a></li>
+							<li class="fw400"><i class="fas fa-envelope fa-fw"></i><a href="mailto:support@sixsq.com">support@sixsq.com</a></li>
+						</ul>
+					</div>
+				</div>
 				<div class="row mt-30 footer-content mb-10">
 					<div class="col-md-3">
 						<h4>Headquarters:</h4>
@@ -29,11 +39,12 @@
 						</ul>
 					</div>
 					<div class="col-md-3 contact">
-						<h4>Contacts:</h4>
+						<h4>India Office:</h4>
 						<ul>
-							<li class="fw400"><i class="fas fa-mobile fa-phone fa-fw"></i>info/support: +41 22 980 95 80</li>
-							<li class="fw400"><i class="fas fa-envelope fa-fw"></i><a href="mailto:info@sixsq.com">info@sixsq.com</a></li>
-							<li class="fw400"><i class="fas fa-envelope fa-fw"></i><a href="mailto:support@sixsq.com">support@sixsq.com</a></li>
+							<li class="fw400">SixSq, c/o Concort</li>
+							<li class="fw400">16B Venetia Tower, Tata Raisina, Sector 59</li>
+							<li class="fw400">Gurgaon-Delhi NCR 122101, Haryana</li>
+							<li class="fw400">India</li>
 						</ul>
 					</div>
 				</div>
