--- a/_includes/primary-footer.html
+++ b/_includes/primary-footer.html
@@ -35,7 +35,8 @@
 						<ul>
 							<li class="fw400">SixSq, c/o Rochade</li>
 							<li class="fw400">10 Anson Road 09-03</li>
-							<li class="fw400">International Plaza, Singapore 079903</li>
+							<li class="fw400">International Plaza, 079903</li>
+							<li class="fw400">Singapore</li>
 						</ul>
 					</div>
 					<div class="col-md-3 contact">
