--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -12,8 +12,8 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-product" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products & Services</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-products">
+                  <a class="dropdown-item" href="/products-and-services/nuvla/overview"><b>Nuvla</b>: Smart Edge and Multi-Cloud Management Service</a>
                   <a class="dropdown-item" href="/products-and-services/nuvlabox/overview"><b>NuvlaBox</b>: Smart Edge Computing Device</a>
-                  <a class="dropdown-item" href="/products-and-services/nuvla/overview"><b>Nuvla</b>: Smart Multi-Cloud and Edge Management Service</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
