--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -22,7 +22,8 @@
                   <a class="dropdown-item" href="/solutions/nuvlacity/overview"><b>NuvlaCity</b>: Edge, Cloud and IoT solutions for Smart Cities</a>
                   <a class="dropdown-item" href="/solutions/nuvlascience/overview"><b>NuvlaScience</b>: Big Data at the Edge and in the Cloud for Science</a>
                   <a class="dropdown-item" href="/solutions/nuvlaoutpost/overview"><b>NuvlaOutpost</b>: Rapid infrastructure for remote areas</a>
-                  <a class="dropdown-item" href="/solutions/nuvlaretail/overview"><b>NuvlaRetail</b>: in-store (real-time) analytics</a>
+                  <a class="dropdown-item" href="/solutions/nuvlaretail/overview"><b>NuvlaRetail</b>: In-store (real-time) analytics</a>
+                  <a class="dropdown-item" href="/solutions/nuvlafactory/overview"><b>NuvlaFactory</b>: Smart manufacturing</a>
                 </div>
               </li>
               <!-- <li class="nav-item">
