--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,12 @@ body {
 ol, ul {
   margin: 0;
   padding: 0;
-  list-style: none; }
+  list-style: none;
+}
+
+.bulleted-list {
+  list-style: disc !important;
+}
 
 select {
   display: block; }
