--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -36,6 +36,7 @@
                   <a class="dropdown-item" href="/media/news">News</a>
                   <a class="dropdown-item" href="/media/videos">Videos</a>
                   <a class="dropdown-item" href="https://media.sixsq.com/blog">Blog</a>
+                  <a class="dropdown-item" href="/media/webinar">Webinar</a>
                   <a class="dropdown-item" href="/media/eguides">eGuides</a>
                   <a class="dropdown-item" href="/media/solution-briefs">Solution Briefs</a>
                 </div>
