--- a/_includes/media-sub-menu.html
+++ b/_includes/media-sub-menu.html
@@ -22,6 +22,9 @@
                 <a class="nav-link" id="navbarMenuLink-blog" href="https://media.sixsq.com/blog">Blog</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" id="navbarMenuLink-webinar" href="/media/webinar">Webinars</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-eguides" href="/media/eguides">eGuides</a>
               </li>
               <li class="nav-item">
