--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -52,6 +52,14 @@
 						<p class="mt-10 text-center">More detail on our solutions.</p>
             <a class="btn-sixsq mt-20 color-3 text-center" href="/media/solution-briefs"><i class="far fa-plus-square"></i>  Explore</a>
 					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
+            <div class="icon-title">
+              <i class="fas fa-chalkboard-teacher"></i>
+            </div>
+            <h3 class="mt-20 text-center fw600">Webinars</h3>
+						<p class="mt-10 text-center">Discover and learn with our experts.</p>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/webinar"><i class="far fa-plus-square"></i>  Learn</a>
+					</div>
         </div>
 			</div>
 		</section>
