--- a/_includes/welcome-webinar.html
+++ b/_includes/welcome-webinar.html
@@ -29,6 +29,7 @@
             	formId: "e27befb9-1cf3-4f1a-aa85-22ac79ec753a"
             });
             </script>
+							<h4 class=""><a href="/media/webinar">More details here</a></h3>
 						<div class="clearfix"></div>
 					</div>
 				</div>
