--- a/_includes/welcome-webinar.html
+++ b/_includes/welcome-webinar.html
@@ -1,4 +1,4 @@
-		<!-- Start Newsletter -->
+		<!-- Start Webinar -->
 		<section class="section-newsletter relative">
 			<div class="container">
 				<div class="row">
@@ -18,21 +18,11 @@
 						<div class="newsletter-text">
 							<h3 class="fw700">Join our next 1 hour interactive webinar:</h3>
 							<h3 class="fw700">Thursday January 16 at 16:00 CET (Geneva/Paris)</h3>
+							<a class="btn-sixsq color-dark mt-20" href="/media/webinar">Regsiter</a>
 						</div>
-            <!--[if lte IE 8]>
-            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
-            <![endif]-->
-            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
-            <script>
-              hbspt.forms.create({
-            	portalId: "475360",
-            	formId: "e27befb9-1cf3-4f1a-aa85-22ac79ec753a"
-            });
-            </script>
-							<h4 class=""><a href="/media/webinar">More details here</a></h3>
-						<div class="clearfix"></div>
 					</div>
 				</div>
+      </div>
 			</div>
 		</section>
-		<!-- End Newsletter -->
+		<!-- End Webinar -->
