--- a/_includes/welcome-webinar.html
+++ b/_includes/welcome-webinar.html
@@ -18,7 +18,7 @@
 						<div class="newsletter-text">
 							<h3 class="fw700">Join our next 1 hour interactive webinar:</h3>
 							<h3 class="fw700">Thursday January 16 at 16:00 CET (Geneva/Paris)</h3>
-							<a class="btn-sixsq color-dark mt-20" href="/media/webinar">Regsiter</a>
+							<a class="btn-sixsq color-dark mt-20" href="/media/webinar">Register</a>
 						</div>
 					</div>
 				</div>
