--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -61,7 +61,7 @@
                 <a class="nav-link" href="https://nuvla.io/ui/sign-in" id="navbarDropdownMenuLink-sign-in" aria-haspopup="true" aria-expanded="false">Sign In</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://nuvla.io/ui/sign-up" id="navbarDropdownMenuLink-sign-up" aria-haspopup="true" aria-expanded="false">Sign Up</a>
+                <a class="nav-link red-link" href="https://nuvla.io/ui/sign-up" id="navbarDropdownMenuLink-sign-up" aria-haspopup="true" aria-expanded="false">Sign Up</a>
               </li>
             </ul>
           </div>
