--- a/_layouts/casestudies-overview-simple.html
+++ b/_layouts/casestudies-overview-simple.html
@@ -21,7 +21,7 @@
 			</div>
 		</section>
 		<div class="justify-content-center minimum-height:1000px">
-      {% for post in site.solutions %}
+      {% for post in site.casestudies %}
         {% if post.product == page.product %}
           {% if post.class == 'usecase' %}
             <div class="widget-section text-center mt-20 mb-20"><i class="fas fa-circle"></i></div>
