--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -24,8 +24,8 @@
   			<div class="container">
   				<div class="row justify-content-center">
   						<div class="col-md-12 section-title text-center mb-50">
-  							<h2 class="pb-10 fw700">Solutions.</h2>
-  							<p class="sub-title fw500">Providing a secured edge to cloud (and back) management platform that enables near-data AI for connected world use cases.</p>
+  							<h2 class="pb-10 fw700">Nuvla.io in action.</h2>
+  							<p class="sub-title fw500">Providing a secured edge management platform as a service that enables connected world use cases.</p>
   							<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
   						</div>
   				</div>
