--- a/_includes/highlighted-with-image-item-no-truncation.html
+++ b/_includes/highlighted-with-image-item-no-truncation.html
@@ -1,4 +1,4 @@
-					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated">
+					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated {{ post.cssclass }}">
             {% if post.image %}
               <img src="{{ post.image }}" alt="{{ post.title }}" width="100%">
             {% endif %}
@@ -8,5 +8,5 @@
               </div>
             {% endif %}
             <h3 class="mt-20 text-center fw600">{{ post.title }}</h3>
-						<p class="mt-10 text-center">{{ post.content }}</p>
+						<p class="mt-10 text-center">{{ post.content | markdownify }}</p>
 					</div>
