--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -25,7 +25,7 @@
   				<div class="row justify-content-center">
   						<div class="col-md-12 section-title text-center mb-50">
   							<h2 class="pb-10 fw700">Nuvla.io in action.</h2>
-  							<p class="sub-title fw500">Providing a secured edge management platform as a service that enables connected world use cases.</p>
+  							<p class="sub-title fw500">Providing a secured edge platform as a service for management of connected devices at scale.</p>
   							<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
   						</div>
   				</div>
