--- a/_includes/media-sub-menu.html
+++ b/_includes/media-sub-menu.html
@@ -24,12 +24,12 @@
               <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-webinar" href="/media/webinar">Webinars</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-eguides" href="/media/eguides">eGuides</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-solution-briefs" href="/media/solution-briefs">Solution Briefs</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </nav>
