--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -37,8 +37,8 @@
                   <a class="dropdown-item" href="/media/videos">Videos</a>
                   <a class="dropdown-item" href="https://media.sixsq.com/blog">Blog</a>
                   <!-- <a class="dropdown-item" href="/media/webinar">Webinars</a> -->
-                  <a class="dropdown-item" href="/media/eguides">eGuides</a>
-                  <a class="dropdown-item" href="/media/solution-briefs">Solution Briefs</a>
+                  <!-- <a class="dropdown-item" href="/media/eguides">eGuides</a>
+                  <a class="dropdown-item" href="/media/solution-briefs">Solution Briefs</a> -->
                 </div>
               </li>
               <li class="nav-item dropdown">
