--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -36,22 +36,22 @@
 						<p class="mt-10 text-center">Read our latest thoughts.</p>
             <a class="btn-sixsq mt-20 color-3 text-center" href="https://media.sixsq.com/blog"><i class="far fa-plus-square"></i>  Read</a>
 					</div>
-					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
+          <!-- <div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
               <i class="fas fa-book"></i>
             </div>
             <h3 class="mt-20 text-center fw600">e-Guides</h3>
-						<p class="mt-10 text-center">Insights into where and why our tech is useful.</p>
+            <p class="mt-10 text-center">Insights into where and why our tech is useful.</p>
             <a class="btn-sixsq mt-20 color-3 text-center" href="/media/eguides"><i class="far fa-plus-square"></i>  Learn</a>
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
               <i class="fas fa-book"></i>
             </div>
             <h3 class="mt-20 text-center fw600">Solution Briefs</h3>
-						<p class="mt-10 text-center">More detail on our solutions.</p>
+            <p class="mt-10 text-center">More detail on our solutions.</p>
             <a class="btn-sixsq mt-20 color-3 text-center" href="/media/solution-briefs"><i class="far fa-plus-square"></i>  Explore</a>
-					</div>
+          </div> -->
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
               <i class="fas fa-chalkboard-teacher"></i>
